# cpp

./: .gitignore  .prettierrc  CMakeLists.txt  README.md  jj structure.md
DataStructure/: dsstructure.md
DataStructure/linearDS/01_Array/: main.cpp  staticArr  staticArr.cpp  work  work.cpp
c/: flow.md  roadmap.md
c/01beginner/00userinput/: main.c
c/01beginner/02variablestypes/: main.c
c/01beginner/04multiarray/: 3dArray.c
c/01beginner/05conditionals/ifelse/: main.c
c/01beginner/05conditionals/ternarychaning/: main.c
c/01beginner/06char/: main.c
c/01beginner/07strings/: unsafeinput.c
c/01beginner/08validating/: main.c
c/01beginner/09loops/break/: main.c
c/01beginner/09loops/continue/: main.c
c/01beginner/09loops/dowhile/: main.c
c/01beginner/09loops/forloop/: main.c
c/01beginner/09loops/goto/: main.c
c/01beginner/09loops/nested/: main.c
c/01beginner/09loops/whileloop/: main.c
c/02intermediate/00returntype/: main.c
c/02intermediate/01functions/: basic.c  main.c  normal.c
c/02intermediate/02recursion/: resources.md
c/02intermediate/02recursion/01linear/: main.c
c/02intermediate/02recursion/02binary/: basic.c  main.c  normal.c
c/02intermediate/02recursion/03tail/: main.c
c/02intermediate/02recursion/04backtracking/: main.cpp
c/02intermediate/02recursion/05divideconquar/: main.cpp
c/02intermediate/02recursion/06memoizationdp/: main.cpp
c/02intermediate/02recursion/07mutualrecursion/: main.cpp
c/02intermediate/02recursion/08nestedrecursion/: main.c
c/02intermediate/02recursion/09treetraversal/: main.cpp
c/02intermediate/02recursion/10graphalgorithems/: main.cpp
c/02intermediate/02recursion/11parsingcompilation/: main.cpp
c/02intermediate/02recursion/12filesystem/: main.cpp
c/02intermediate/02recursion/13tailoptimization/: main.cpp
c/02intermediate/02recursion/14memoryimplementation/: main.cpp
c/02intermediate/02recursion/15iterativeconversion/: main.cpp
c/02intermediate/02recursion/16stackoverflow/: main.cpp
c/02intermediate/02recursion/17exponentialtime/: main.cpp
c/02intermediate/02recursion/basic/: main.c
c/02intermediate/03array/: basic.c  main  main.c  questions.md
c/basics/: output1  output2  print1  print1.c  print2.cpp
c/basics/01hello/: main
c/basics/02variablestypes/: main
c/basics/03array/: basicArray.c  dynamicArray.c  normalArray.c
c/basics/04multiarray/: three  two
c/basics/06strings/: basic.c  main  manualnewlinecheck.c  strstrincheck.c
c/beginner(foundations)/02variablestypes/: main.c
c/beginner(foundations)/03array/: regularArray.c
c/beginner(foundations)/04multiarray/: one.c  two.c
c/beginner(foundations)/05conditionals/switch/: main.c
c/beginner(foundations)/05conditionals/ternary/: main.c
c/beginner(foundations)/06strings/: main.c  safeinput.c  samplecode.c
c/demo/: ex  example.c  one.py
c/extras/checkmemorylocation/: bytecode  bytecode.c
c/extras/patterns/: main.c
c/oopsconcepts/: first.c
c/patterns/: list.md
c/patterns/01star/: main.c
c/projects/: list.md
c/projects/01beginner/calculator/: main  main.c
c/projects/01beginner/numberguess/: main.c
c/projects/01calci/: main.c
c/questions/: list.md
c/questions/01helloworld/: main.c
c/questions/03largestnumber/: main.c
c/questions/04evenodd/: main.c
c/questions/06fibonacci/: main.c
c/questions/08factorial/: main.c
c/questions/09armstrong/: main  main.c
cpclasses/01class/: demo  studymaterials.txt
cpclasses/02class/: numberpatern  numberpatern.cpp  patern  patern.cpp
cpclasses/03class/: iterativepattern  iterativepattern.cpp  reversenumber  reversenumber.cpp  zeroonespattern  zeroonespattern.cpp
cpclasses/05class/: array  array.cpp  lenearsearch  lenearsearch.cpp  minarray  minarray.cpp
cpclasses/06class/: swap  swap.cpp
cpclasses/07class/: Main.cpp  main
cpclasses/08class/: Main.cpp  main  pattern  pattern.cpp
cpclasses/09class/: febopattern.cpp  fibopattern
cpclasses/11class/: maxele  maxelement.cpp  reversemax.cpp
cpp/: flow.md
cpp/01_varconst/: main.cpp
cpp/02_datatypes/: casting.cpp  data.cpp  modifiers.cpp  myStrings.cpp  userinput.cpp
cpp/03_string/: main  main.cpp
cpp/04_functions/: main  main.cpp
cpp/05_recursion/: basic.cpp  main.cpp
cpp/06_headerfile/: myfunctions.cpp  myfunctions.h
cpp/functions/: lambdas.cpp  main.cpp
cpp/oops/: 01_class&object.cpp  basic.cpp  dummy  dummy.cpp  encapsulation.cpp  inheriatance.cpp  polymorphism.cpp
cpp/oops/projects/: sms  sms.cpp
cpp/test/: hello  hello.cpp
foundatations/first_program/: first_program.cpp  firstp  second  second.cpp
foundatations/variables/: variables  variables.cpp
game/demo/: main  main.cpp
oops/abstraction/: Main.cpp  output
oops/classes&objects/: Main.cpp  output
oops/encapsulation/: Main.cpp  output
oops/inheritance/: Main.cpp  output
oops/polymorphism/: Main.cpp  output
questions/: list.md
questions/02swapnumber/: main.c
questions/03largestnumber/: basic.c
questions/05prime/: main.c
questions/07reversenumber/: main.c
topics/recursion/: array  array.cpp  fact  factorial.cpp  main.cpp  print  print.cpp  reverse  reverse.cpp  sumn  sumn.cpp
