cmake_minimum_required(VERSION 3.31)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp
        c/01beginner/00userinput/main.c
        c/01beginner/01hello/main.c
        c/01beginner/02variablestypes/main.c
        c/01beginner/03array/basicArray.c
        c/01beginner/03array/dynamicArray.c
        c/01beginner/03array/normalArray.c
        c/01beginner/03array/regularArray.c
        c/01beginner/04multiarray/3dArray.c
        c/01beginner/04multiarray/one.c
        c/01beginner/04multiarray/two.c
        c/01beginner/05conditionals/ifelse/main.c
        c/01beginner/05conditionals/switch/main.c
        c/01beginner/05conditionals/ternary/main.c
        c/01beginner/05conditionals/ternarychaning/main.c
        c/01beginner/06char/main.c
        c/01beginner/07strings/basic.c
        c/01beginner/07strings/main.c
        c/01beginner/07strings/manualnewlinecheck.c
        c/01beginner/07strings/safeinput.c
        c/01beginner/07strings/samplecode.c
        c/01beginner/07strings/strstrincheck.c
        c/01beginner/07strings/unsafeinput.c
        c/01beginner/08validating/main.c
        c/01beginner/09loops/break/main.c
        c/01beginner/09loops/continue/main.c
        c/01beginner/09loops/dowhile/main.c
        c/01beginner/09loops/forloop/main.c
        c/01beginner/09loops/goto/main.c
        c/01beginner/09loops/nested/main.c
        c/01beginner/09loops/whileloop/main.c
        c/02intermediate/00returntype/main.c
        c/02intermediate/01functions/advance.c
        c/02intermediate/01functions/basic.c
        c/02intermediate/01functions/main.c
        c/02intermediate/01functions/normal.c
        c/02intermediate/01functions/regular.c
        c/02intermediate/01functions/semi.c
        c/02intermediate/02recursion/00basic/main.c
        c/02intermediate/02recursion/01linear/main.c
        c/02intermediate/02recursion/02binary/basic.c
        c/02intermediate/02recursion/02binary/main.c
        c/02intermediate/02recursion/02binary/normal.c
        c/02intermediate/02recursion/03tail/main.c
        c/02intermediate/02recursion/04backtracking/main.cpp
        c/02intermediate/02recursion/05divideconquar/main.cpp
        c/02intermediate/02recursion/06memoizationdp/main.cpp
        c/02intermediate/02recursion/07mutualrecursion/main.cpp
        c/02intermediate/02recursion/08nestedrecursion/main.c
        c/02intermediate/02recursion/09treetraversal/main.cpp
        c/02intermediate/02recursion/10graphalgorithems/main.cpp
        c/02intermediate/02recursion/11parsingcompilation/main.cpp
        c/02intermediate/02recursion/12filesystem/main.cpp
        c/02intermediate/02recursion/13tailoptimization/main.cpp
        c/02intermediate/02recursion/14memoryimplementation/main.cpp
        c/02intermediate/02recursion/15iterativeconversion/main.cpp
        c/02intermediate/02recursion/16stackoverflow/main.cpp
        c/02intermediate/02recursion/17exponentialtime/main.cpp
        c/02intermediate/03array/basic.c
        c/02intermediate/03array/main.c
        c/02intermediate/03array/solutions.c
        c/extras/checkmemorylocation/bytecode.c
        c/extras/patterns/main.c
        c/patterns/01star/main.c
        c/projects/01beginner/calculator/main.c
        c/projects/01beginner/numberguess/main.c
        c/projects/01calci/main.c
        c/questions/01helloworld/main.c
        c/questions/02swapnumber/main.c
        c/questions/03largestnumber/basic.c
        c/questions/03largestnumber/main.c
        c/questions/03largestnumber/normal.c
        c/questions/04evenodd/main.c
        c/questions/05prime/main.c
        c/questions/06fibonacci/main.c
        c/questions/07reversenumber/main.c
        c/questions/08factorial/main.c
        c/questions/09armstrong/main.c
        cpclasses/01class/demo.cpp
        cpclasses/02class/numberpatern.cpp
        cpclasses/02class/patern.cpp
        cpclasses/03class/iterativepattern.cpp
        cpclasses/03class/reversenumber.cpp
        cpclasses/03class/zeroonespattern.cpp
        cpclasses/05class/array.cpp
        cpclasses/05class/lenearsearch.cpp
        cpclasses/05class/minarray.cpp
        cpclasses/06class/swap.cpp
        cpclasses/07class/Main.cpp
        cpclasses/08class/Main.cpp
        cpclasses/08class/pattern.cpp
        cpclasses/09class/febopattern.cpp
        cpclasses/10class/binarysearch.cpp
        cpclasses/11class/maxelement.cpp
        cpclasses/11class/reversemax.cpp
        cpp/01_varconst/main.cpp
        cpp/02_datatypes/casting.cpp
        cpp/02_datatypes/data.cpp
        cpp/02_datatypes/modifiers.cpp
        cpp/02_datatypes/myStrings.cpp
        cpp/02_datatypes/userinput.cpp
        cpp/functions/lambdas.cpp
        cpp/functions/main.cpp
        cpp/oops/projects/sms.cpp
        cpp/oops/01_class&object.cpp
        cpp/oops/basic.cpp
        cpp/oops/dummy.cpp
        cpp/oops/encapsulation.cpp
        cpp/oops/inheriatance.cpp
        cpp/oops/polymorphism.cpp
        cpp/test/hello.cpp
        foundatations/first_program/first_program.cpp
        foundatations/first_program/second.cpp
        foundatations/variables/variables.cpp
        oops/abstraction/Main.cpp
        oops/classes&objects/Main.cpp
        oops/encapsulation/Main.cpp
        oops/inheritance/Main.cpp
        oops/polymorphism/Main.cpp)
